<resources>
    <string name="app_name">ClimbMate</string>
    <string name="name_placeholder">PLACE NAME HERE</string>
    <string name="details">Details...</string>
    <string name="save_place">Save Place</string>
    <string name="cancel">Cancel</string>
    <string name="error_place_name">Place name required!</string>
    <string name="current_temp">00</string>
    <string name="humidity">Humidity: \s</string>
    <string name="sunrise">Sunrise: \s</string>
    <string name="sunset">Sunset: \s</string>
    <string name="about_text">This app was created by Brooke Weil in May 2017</string>
    <string name="enter_temp">Enter your desired temperature:</string>
    <string name="save_temp">Save Temp</string>
    <string name="zip_error">Zipcode must be 5 digits!</string>
    <string name="temp_error">Temperature should be between 32 and 100</string>
    <string name="rain">Rain</string>
    <string name="cooler_txt">Cooler than usual</string>
    <string name="ideal_txt">Near ideal temps!</string>
    <string name="hist_max_txt">Average max:</string>
    <string name="menu_instr_text">Swipe in from the left side of the screen to open the menu!</string>
    <string name="connection_error_text">Bad connection! Can\'t load.</string>
    <string name="miles_away_text">\s miles from me</string>
    <string name="map_add_txt">Add from map instead</string>
    <string name="map_instr_txt">Select your location to add by clicking on the map</string>
    <string name="error_coord_txt">Coordinates are required!</string>
    <string name="error_find_text">Can\'t find place to update!</string>
    <string name="wait_api">Sorry, too many API calls! Wait a minute, then try again.</string>
</resources>
