<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:text="Enter an area name:"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPlaceName"
        android:hint="My Crag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Area Coordinates:"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etLat"
        android:hint="Latitude"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etLon"
        android:hint="Longitude"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnMapAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_add_txt"/>

</LinearLayout>
