<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hilllight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvPlaceNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="36dp"
            android:text="City"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="24dp"
            android:text="Description"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60dp"
        android:textStyle="bold"
        android:text="@string/current_temp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:text="@string/current_temp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36dp"
            android:text="/"/>

        <TextView
            android:id="@+id/tvMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:text="@string/current_temp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/ivWeatherIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"/>

            <TextView
                android:id="@+id/tvSunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"/>

            <TextView
                android:id="@+id/tvSunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"/>

            <TextView
                android:id="@+id/tvHistMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_temp"/>

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:context="hu.ait.weatherinfo.PlacesListActivity" />

</LinearLayout>